WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
274977
[WebGPU] RGB external textures read RRG channels instead of RGB
https://bugs.webkit.org/show_bug.cgi?id=274977
Summary
[WebGPU] RGB external textures read RRG channels instead of RGB
Mike Wyrzykowski
Reported
2024-05-31 11:23:45 PDT
[WebGPU] RGB external textures read RRG channels instead of RGB
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2024-05-31 11:23:56 PDT
radar://129054259
Mike Wyrzykowski
Comment 2
2024-05-31 14:36:18 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29397
EWS
Comment 3
2024-06-03 18:04:39 PDT
Committed
279681@main
(ca50fe80d4cf): <
https://commits.webkit.org/279681@main
> Reviewed commits have been landed. Closing PR #29397 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug