[WebGPU] RGB external textures read RRG channels instead of RGB https://bugs.webkit.org/show_bug.cgi?id=274977 <radar://129054259>

Reviewed by Tadeu Zagallo.

Fix an issue where single planar external textures attempted to read
from a null texture and instead of reading RGB we would read RRG or ARR.

* LayoutTests/fast/webgpu/regression/repro_274977-expected.txt: Added.
* LayoutTests/fast/webgpu/regression/repro_274977.html: Added.
* Source/WebGPU/WebGPU/BindGroup.mm:
(WebGPU::metalPixelFormat):
(WebGPU::Device::createExternalTextureFromPixelBuffer const):

Canonical link: https://commits.webkit.org/279681@main